Bug 480016 - Fitts' Law broken for floating panel while it's actually floating
Summary: Fitts' Law broken for floating panel while it's actually floating
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression, usability
Depends on:
Blocks:
 
Reported: 2024-01-18 20:35 UTC by Nate Graham
Modified: 2024-01-19 15:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-01-18 20:35:10 UTC
With a floating panel, clicks around the edge of it while it's floating are supposed to be redirected to the closest point on the panel itself. At the moment they are not.
Comment 1 Bug Janitor Service 2024-01-19 09:02:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3786
Comment 2 Nate Graham 2024-01-19 15:35:10 UTC
Git commit da2e891e740e65e0caffaa82735444419d3981ac by Nate Graham, on behalf of David Redondo.
Committed on 19/01/2024 at 16:18.
Pushed by ngraham into branch 'master'.

Restore Fitts' law for the panel

This is basically a revert of 21a1b654fe470437a4ff7954b370cf5a88a7c98d.
The justificaiton is correct the mask needs to be in local coordinates
this is/was achieved via mapFromGlobal. The problem was that at various
points the obtained geometry was intersected with the screen geometry.
Now that is is fixed we actually want to use screenPanelRect as the
input region which includes the area around the floating panel.
FIXED-IN:6.0

M  +4    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/da2e891e740e65e0caffaa82735444419d3981ac
Comment 3 Nate Graham 2024-01-19 15:54:31 UTC
Git commit c52ecdb85ef84f1b037af6f14ad664bc2544abf2 by Nate Graham, on behalf of David Redondo.
Committed on 19/01/2024 at 16:36.
Pushed by ngraham into branch 'Plasma/6.0'.

Restore Fitts' law for the panel

This is basically a revert of 21a1b654fe470437a4ff7954b370cf5a88a7c98d.
The justificaiton is correct the mask needs to be in local coordinates
this is/was achieved via mapFromGlobal. The problem was that at various
points the obtained geometry was intersected with the screen geometry.
Now that is is fixed we actually want to use screenPanelRect as the
input region which includes the area around the floating panel.
FIXED-IN:6.0


(cherry picked from commit da2e891e740e65e0caffaa82735444419d3981ac)

M  +4    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c52ecdb85ef84f1b037af6f14ad664bc2544abf2